--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -7,3 +7,9 @@
 body {
     font-family: "Montserrat", serif;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
